[tool.poetry]
name = "classic"
version = "0.1.0"
description = "Classification Comparison"
authors = ["alienkrieg <alienkrieg@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
